--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="assets/icons/icone-barra.png" />
     <link rel="stylesheet" href="style.css">
+    
 
     <title>Links</title>
 </head>
@@ -21,7 +23,7 @@
     <div class="email">
 
     <ul class="email-kaue">
-        <li><a href="mailto:kaue178hotimail@gmail.com"><img src="assets/icons/icons8-email-open-64.png" width="40px" height="40px" alt="Imagem linkedin"></li>
+        <li><a href="mailto:kaue178hotimail@gmail.com"><img src="assets/icons/email.png" width="40px" height="40px" alt="Imagem linkedin"></li>
     </ul>
 
         </div>
@@ -39,10 +41,10 @@
 <div class="social-images">
     <ul class="images">
 
-        <li><a href="https://www.linkedin.com/in/kauê-matos-oliveira-a76410213/"><img src="assets/icons/icons8-linkedin-circundado.gif" width="90px" height="90px" alt="Imagem linkedin"></li>
-        <li><a href="https://github.com/iKaueMatos"><img src="assets/icons/icons8-github-96.svg" width="90px" height="90px" alt="Imagem GitHub"></li>
+        <li><a href="https://www.linkedin.com/in/kauê-matos-oliveira-a76410213/"><img src="assets/icons/linkedin.gif" width="90px" height="90px" alt="Imagem linkedin"></li>
+        <li><a href="https://github.com/iKaueMatos"><img src="assets/icons/github.svg" width="90px" height="90px" alt="Imagem GitHub"></li>
         <li><a href="https://www.instagram.com/kauematos2003/"><img src="assets/icons/instagram.svg" width="90px" height="90px" alt="Imagem Instagram"></li>
-        <li><a href="https://www.youtube.com/channel/UCjlRsm8Ri-_c86jf-4ldoSg"><img src="assets/icons/icons8-reproduzir-youtube-96.svg" width="90px" height="90px" alt="Imagem Youtube"></li>
+        <li><a href="https://www.youtube.com/channel/UCjlRsm8Ri-_c86jf-4ldoSg"><img src="assets/icons/youtube.svg" width="90px" height="90px" alt="Imagem Youtube"></li>
 
     </ul>
 
@@ -61,5 +63,7 @@
             </div>
         </div>
     </div>
+</div>
+</div>
 </body>
 </html>
