--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="assets/icons/icone-barra.png" />
     <link rel="stylesheet" href="style.css">
     
@@ -41,7 +41,7 @@
 <div class="social-images">
     <ul class="images">
 
-        <li><a href="https://www.linkedin.com/in/kauê-matos-oliveira-a76410213/"><img src="assets/icons/linkedin.gif" width="90px" height="90px" alt="Imagem linkedin"></li>
+        <li><a href="https://www.linkedin.com/in/kauê-matos-oliveira-a76410213/"><img src="assets/icons/linkedin.svg" width="90px" height="90px" alt="Imagem linkedin"></li>
         <li><a href="https://github.com/iKaueMatos"><img src="assets/icons/github.svg" width="90px" height="90px" alt="Imagem GitHub"></li>
         <li><a href="https://www.instagram.com/kauematos2003/"><img src="assets/icons/instagram.svg" width="90px" height="90px" alt="Imagem Instagram"></li>
         <li><a href="https://www.youtube.com/channel/UCjlRsm8Ri-_c86jf-4ldoSg"><img src="assets/icons/youtube.svg" width="90px" height="90px" alt="Imagem Youtube"></li>
@@ -59,11 +59,16 @@
     
     </ul>
 
+
                 </div>
             </div>
         </div>
     </div>
 </div>
 </div>
+
+
+
+
 </body>
 </html>
